# livox-fast-lio-windows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Readme_EN.md  STARTUP_PARAMETERS.md  vcpkg.json
cmake/: deploy_runtime_dlls.cmake
config/: avia.yaml  horizon.yaml  horizon_hd.yaml  mid360.yaml
docs/superpowers/plans/: 2026-06-25-foxglove-bag-replay.md  2026-06-26-lvx-sdk1-playback.md
docs/superpowers/specs/: 2026-06-25-foxglove-bag-replay-design.md  2026-06-25-lvx-sdk1-playback-design.md
foxglove-config/: 3dpanel_settting_live.json  3dpanel_settting_replay.json
include/: Exp_mat.h  IMU_Processing.hpp  async_map_publisher.h  bag_reader.h  bag_writer.h  bounded_timing_stats.h  common_lib.h  fast_lio_observation.h  foxglove_output_worker.h  foxglove_publisher.h  laser_mapping.h  lidar_imu_sync.h  livox_adapter.h  livox_point_utils.h  livox_sdk.h  lvx_reader.h  map_accumulator.h  map_build_worker.h  playback_status.h  preprocess.h  realtime_foxglove_worker.h  ros_bag.h  ros_message.h  storage_worker.h  tiled_map_store.h  types.h  use-ikfom.hpp  yaml_config.h
include/ikd-Tree/: ikd_Tree.cpp  ikd_Tree.h
src/: async_map_publisher.cpp  bag_reader.cpp  bag_writer.cpp  foxglove_output_worker.cpp  foxglove_publisher.cpp  laser_mapping.cpp  livox_adapter.cpp  livox_sdk_stub.cpp  lvx_reader.cpp  main.cpp  map_build_worker.cpp  preprocess.cpp  realtime_foxglove_worker.cpp  ros_bag.cpp  storage_worker.cpp  tiled_map_store.cpp  yaml_config.cpp
tests/: test_livox_fast_lio.cpp  test_realtime_foxglove_worker.cpp
